# pipen-board

./: .gitignore  ExamplePipeline.config.toml  README.md  SingleProcPipeline.config.toml  pyproject.toml  setup.py  test_ws.py
.codesandbox/: Dockerfile  setup.sh  tasks.json
.github/workflows/: build.yml
example/: addtional.toml  example-cloud.py  example-cloud.toml  example-single.py  example.py  single.toml
pipen_board/: __init__.py  additional_auto.toml  api.py  apis.py  cli.py  data_manager.py  defaults.py  http_handler.py  pipeline_parsing.py  plugin.py  quart_app.py  ws_broker.py
pipen_board/frontend/: index.html  package-lock.json  package.json  vite.config.js
pipen_board/frontend/public/assets/: schema.json
pipen_board/frontend/src/: App.svelte  main.js
pipen_board/frontend/src/assets/: global.css  markdown.css  normalize.css
pipen_board/frontend/src/lib/: Configuration.svelte  Header.svelte  History.svelte  Layout.svelte  PreviousRun.svelte  Run.svelte  constants.js  store.js  utils.js
pipen_board/frontend/src/lib/configuration/: Description.svelte  GeneralOptions.svelte  HiddenOptions.svelte  NavDivider.svelte  NavItem.svelte  RunningOptions.svelte
pipen_board/frontend/src/lib/configuration/options/: ArrayOption.svelte  AutoOption.svelte  BoolOption.svelte  ChoiceOption.svelte  JsonOption.svelte  MChoicesOption.svelte  MoreLikeOption.svelte  NSOption.svelte  NonNSOption.svelte  Option.svelte  OptionFrame.svelte  PlainOption.svelte  TextOption.svelte
pipen_board/frontend/src/lib/run/: FilePreview.svelte  Log.svelte  ProcRun.svelte
