[tool.poetry]
name = "pipen-board"
version = "0.17.1"
description = "Visualization configuration and running of pipen pipelines on the web"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
exclude = ["pipen_board/frontend/[!build]*", "pipen_board/frontend/index.html"]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.19"
psutil = "^5.9"
websocket-client = "^1.8"
python-slugify = "^8.0"
pipen-args = "^0.17"
pipen-log2file = "^0.10"
pipen-report = { version = "^0.23", optional = true }
pipen-diagram = { version = "^0.13", optional = true }
pipen-filters = { version = "^0.15", optional = true }

[tool.poetry.extras]
report = ["pipen-report"]
diagram = ["pipen-diagram"]
filters = ["pipen-filters"]
all = ["pipen-report", "pipen-diagram", "pipen-filters"]

[tool.poetry.group.dev.dependencies]
cloudsh = "^0.1"
python-dotenv = "^1"
google-cloud-storage = "^3"

[tool.poetry.plugins.pipen]
board = "pipen_board:pipen_board_plugin"

[tool.poetry.plugins.pipen_cli]
cli-board = "pipen_board:PipenCliBoardPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
